# void

./: .convergence  .gitignore  .gitmodules  .loop  .next-session  .own  .prettierignore  .raw-ref  .roadmap  .roadmap.ai_native_io  .roadmap.ai_native_structure  .roadmap.grid  .roadmap.perf_baseline  .roadmap.session_persistence  .roadmap.upstream_diverge  AGENTS.md  AGENTS.tape  AI_POLICY.md  AI_POLICY.tape  ARCHITECTURE.html  ARCHITECTURE.json  ARCHITECTURE.md  BUILD_SPEED_PLAN.md  CHANGELOG.jsonl  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile  HACKING.md  HACKING.tape  HANDOFF.md  INBOX.log.md  INBOX.md  ING.jsonl  LATTICE_POLICY.md  LIMIT_BREAKTHROUGH.md  Makefile  PACKAGING.md  (+46 more)
.claude/: settings.json
.github/: CODEOWNERS
.harness/: enforcement.json  keywords.json  prefs.json  severity-map.json
ai/: CLAUDE.md
app/: CLAUDE.md  main.hexa  main_app.hexa  main_tabs.hexa  render  sys  terminal
archive/: AGENTS.tape
core/: CLAUDE.md
docs/: CLAUDE.md  void_self_mk2_tuning_landed_2026_05_02.ai.md
example/: AGENTS.md  README.md
example/c-vt-cmake-static/: CMakeLists.txt  README.md
example/c-vt-cmake-static/src/: main.c
examples/: test_ffi.hexa  test_pty.hexa
flatpak/: com.mitchellh.void-debug.yml  com.mitchellh.void.yml  com.need-singularity.void-debug.yml  com.need-singularity.void.yml  exceptions.json  zig-packages.json
include/: module.modulemap  void.h
lib/: libvoid_bridge.dylib
macos/: AGENTS.md  Void-Info.plist  Void.sdef  build.nu  default.profraw
nix/: devShell.nix  libvoid-vt.nix  package.nix  tests.nix
(+909 files in other folders)
